# HU-EDGE-submission

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  setup_postgres.ps1
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  analysis_configs.py  auth.py  chat.py  documentation.py  projects.py  search.py  users.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  analysis_config.py  chat.py  documentation.py  project.py  user.py
backend/app/schemas/: __init__.py  analysis_config.py  chat.py  documentation.py  project.py  user.py
backend/app/services/: chat_state.py  code_analyser.py  documentation.py  langgraph_rag.py  multi_agent_chat.py  progress_tracker.py  repository_analyzer.py  vector_store.py
backend/app/services/agents/: __init__.py  api_signatures.py  (+7 more)
backend/app/utils/: langfuse_config.py
backend/scripts/: reindex_pgvector.py
frontend/: .dockerignore  .gitignore  Dockerfile  app.py  main.py  pyproject.toml
frontend/api/: admin.py  analysis_configs.py  auth.py  chat.py  client.py  documentation.py  projects.py  search.py  users.py
frontend/components/: progress_viewer.py  sidebar.py
frontend/config/: settings.py
frontend/core/: auth.py  logging.py  session.py
frontend/pages/: admin_page.py  auth_page.py  dashboard.py
frontend/pages/tabs/: chat_tab.py  config_tab.py  create_project_tab.py  documentation_tab.py  projects_tab.py
